		- correction de certains menus modaux, toujours très lents
		- ajout des menus modaux manquant
		- correction de problèmes de traduction dans la version anglaise
		- inclusion de panels de statistiques pendant les parties, pour afficher décrire 
		  l'évolution de tournois/rencontres/manches sous forme de graphiques
		- possibilité de visualiser les résultats détaillés d'un tournoi passé (et enregistré).
		- affichage des numéros des matches/rounds dans les titres des panels (pour une meilleure navigation)
	- ressources : 
		- Shirobon SBM4
		- morts subites dans les niveaux officiels de SBM1
		- outils de niveaux pour générer programmatiquement des morts subites typiques
		- thème pour le tournoi VI
		- niveaux pour le tournoi VI
		- tournoi VI et super-coupe V
	- API IA :
		- quelques bugs corrigés
		- méthode initOthers dans ArtificialIntelligence, permettant d'initialiser des objets après les gestionnaires.
		- vérification de l'unicité des noms de cas pour un agent
		- cache automatique pour le calcul de critères
		- vérification de l'unicité des noms de critères pour un agent
		- utilités de référence stockées dans des maps différentes pour chaque mode
		- décomposition du traitement plus avancée dans le MoveHandler
		- représentation et accès aux évènements de mort subite
		- simulation des évènements de mort subite
		- représentation et accès aux items contagieux et à effet temporaire
		- simulation des items contagieux et à effet temporaire
		- méthode permettant d'accéder à l'effet qu'un item aurait sur un joueur (effet contextuel)
	- divers:
		- changement du copyright (2012 >> 2013)
		- quelques erreurs corrigées dans les scripts de compilation

+ beta.025
	- ressources : 
		- TODO nettoyage des thèmes (moins d'images à charger, mutualisation/normalisation des fichiers xml)
	- gui :
		- possibilité de masquer le message de pause
		- bascule différente entre l'affichage des temps (mode débug)